# simplepir

./: Cargo.toml  README.md  lattice-crypto.md  railway.toml  simple-pir-theory.md  theory.md  ypir-theory.md
benches/: paper_simplepir.rs  pir_benchmark.rs
benches/results/: bench_002_u32.md  bench_004_minor_fixes.md  bench_005_paper_simplepir_like.md
password-demo/: .gitignore  DEPLOY.md  Dockerfile  railway.toml
password-demo/hibp/: Cargo.toml  README.md
password-demo/hibp/examples/: check.rs
password-demo/hibp/src/: checker.rs  compact.rs  downloader.rs  error.rs  lib.rs
password-demo/scripts/: README.md  download-hibp-sample.sh  download-hibp-tiny.sh  download-hibp.sh
password-demo/server/: Cargo.toml  Dockerfile  README.md
password-demo/server/src/: main.rs
password-demo/ui/app/: globals.css  page.tsx
password-demo/ui/app/pir-demo/: page.tsx
password-demo/ui/lib/: pir_wasm.d.ts
pir/benches/: pir_benchmark.rs
pir/src/: binary_fuse.rs  client.rs  double_pir.rs  lib.rs  matrix_database.rs  mode_selector.rs  pir_trait.rs  server.rs
pir/tests/: double_pir_binary_fuse_integration_test.rs  integration_test.rs
src/: client.rs  lib.rs  matrix_database.rs  params.rs  pir.rs  regev.rs  ring.rs  ring_regev.rs  server.rs
tests/: integration_test.rs
