[package]
name = "hibp"
version = "0.1.0"
edition = "2024"
description = "HaveIBeenPwned Pwned Passwords downloader and lookup library"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
sha1 = "0.10"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
cli = ["tracing-subscriber"]

[[bin]]
name = "hibp-download"
path = "src/bin/download.rs"
required-features = ["cli"]
