[package]
name = "hibp-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for HIBP password checking with DoublePIR support"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HIBP library (from public GitHub repo)
hibp = { git = "https://github.com/p0mvn/pir.git", branch = "main" }

# PIR library (from public GitHub repo, main branch @ 152a8ee)
pir = { git = "https://github.com/p0mvn/pir.git", rev = "152a8ee3b253a7369ec0fbcb2bc08d1d184f443e" }

# Random number generation
rand = "0.9"

dotenvy = "0.15"
