[package]
name = "hibp-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server for HIBP password checking with DoublePIR support"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HIBP library (from GitHub @ 7f82854)
hibp = { git = "https://github.com/p0mvn/pir.git", rev = "7f82854" }

# PIR library (from GitHub @ 7f82854)
pir = { git = "https://github.com/p0mvn/pir.git", rev = "7f82854" }

# Random number generation
rand = "0.9"

dotenvy = "0.15"
